--- a/historico.html
+++ b/historico.html
@@ -6,19 +6,25 @@
     <link rel = "stylesheet" href = "main.css">
 </head>
 <body>
+    <style>
+        h1{
+            background-color: #394674;
+            color: white;
+        }
+    </style>
+
+    <header>UFC - Sigaa - Sistema Integrado de Gestão de Atividades Acadêmicas</header>
     <nav>
         <a href="cadastro_componentes.html"> Cadastro de Componentes </a>
         <a href="index.html"> Home </a>
-        <a href="painel_controle.html"> Página Principal </a>
+        <a href="historico.html"> Histórico </a>
     </nav>
-
-    <header>UFC - Sigaa - Sistema Integrado de Gestão de Atividades Acadêmicas</header>
     <br>
 
     <h1>Histórico do Aluno</h1>
     <br>
 
-    <table border="2px">
+    <table id="tabela" class="tabela">
         <tr>
              <th>Disciplina</th>
              <th>Carga Horária</th>
