--- a/painel_controle.html
+++ b/painel_controle.html
@@ -6,45 +6,79 @@
     <link rel = "stylesheet" href = "main.css">
 </head>
 <body>
+    
+    <header>UFC - Sigaa - Sistema Integrado de Gestão de Atividades Acadêmicas</header>
 
     <nav>
         <a href="cadastro_componentes.html"> Cadastro de Componentes </a>
         <a href="index.html"> Home </a>
         <a href="historico.html"> Histórico </a>
     </nav>
-    
-    <header>UFC - Sigaa - Sistema Integrado de Gestão de Atividades Acadêmicas</header>
 
-    <h2>Dados do Aluno</h2>
+    <span id="FundosPalavras"><h2>Dados do Aluno</h2></span> 
     <br>
 
-    <img src="imagem/gigachad.jpg" width=100 height=100>
-    <br>
-
-    <h4>NOME: Gabriel Vasconcelos Santos</h4>
-    <h4>EMAIL: gabrielvs@alu.ufc.br</h4>
-    <h4>IRA: 8,00 </h4>
-    <h4>Creditos Cursados: 640 </h4>
-    <br>
-
-    <div>
-        <p>Selecione a cor do site:</p> 
-        <input type="color">
+    <div id="foto">
+        <img src="imagem/gigachad.jpg" width=150 height=150>
     </div>
-    <br>
 
-    <ul>
-        <h2>Lista de disciplinas:</h2>
-        <br>
-        <li>Banco de Dados</li>
-        <li>Fundamentos de Economia</li>
-        <li>Higiene Industrial e Segurança no Trabalho</li>
-        <li>Inteligência Computacional</li>
-        <li>Qualidade de Software</li>
-        <li>Tecnologias Web</li>
-    </ul>
-    <br>
+    <div id="informacoes-perfil" class="item-painel">
+        <table>
+            <tr>
+                <td>
+                    Nome:
+                </td>
+                <td>
+                    Gabriel Vasconcelos Santos
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Email:
+                </td>
+                <td>
+                    gabvs2003@alu.ufc.br
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    IRA:
+                </td>
+                <td>
+                    8.00
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Horas Cursadas:
+                </td>
+                <td>
+                    1600
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Cor do site:
+                </td>
+                <td>
+                    <input type="color" value="#0000">
+                </td>
+            </tr>
+        </table>
+    </div>
 
+    <span id="FundosPalavras"><h2>Lista de disciplinas:</h2></span>
+
+        <ul>
+            <li>Banco de Dados</li>
+            <li>Fundamentos de Economia</li>
+            <li>Higiene Industrial e Segurança no Trabalho</li>
+            <li>Inteligência Computacional</li>
+            <li>Qualidade de Software</li>
+            <li>Tecnologias Web</li>
+        </ul>
+
+    <span id="FundosPalavras"><h2>Progresso:</h2></span>
     <ul>
         <li>Disciplinas obrigatórias</li>
         <progress max="100" value="85"> </progress>
@@ -59,19 +93,15 @@
         <li>Horas de programação</li>
         <progress max="100" value="80"> </progress>
     </ul>
-    <br>
 
+    <span id="FundosPalavras"><h4>Atividades Realizadas:</h4></span>
     <ul>
-        <h4>Atividades Realizadas:</h4>
-        <br>
         <li>---------------------</li>
         <li>---------------------</li>
     </ul>
-    <br>
 
+    <span id="FundosPalavras"><h4>Atividades Pendentes:</h4></span>
     <ul>
-        <h4>Atividades Pendentes:</h4>
-        <br>
         <li>Seminário de Estágio</li>
         <li>Estágio Supervisionado</li>
     </ul>
